--- a/Pages/ManageUsers.cshtml
+++ b/Pages/ManageUsers.cshtml
@@ -1,5 +1,6 @@
 ﻿@page
-@using Apartment.Model
+@using Apartment.ViewModels
+@using Apartment.Enums
 @model Apartment.Pages.ManageUsersModel
 @{
     ViewData["Title"] = "User Management";
