--- a/Pages/Manager/GenerateBills.cshtml
+++ b/Pages/Manager/GenerateBills.cshtml
@@ -1,5 +1,5 @@
-﻿@page
-@model Apartment.Pages.GenerateBillsModel
+﻿@page "/Manager/GenerateBills"
+@model Apartment.Pages.Manager.GenerateBillsModel
 @{
     ViewData["Title"] = "Generate Monthly Bills";
     Layout = "_Layout";
