--- a/Pages/Manager/ManageApartments.cshtml
+++ b/Pages/Manager/ManageApartments.cshtml
@@ -1,5 +1,5 @@
-﻿@page
-@model Apartment.Pages.ManageApartmentsModel
+﻿@page "/Manager/ManageApartments"
+@model Apartment.Pages.Manager.ManageApartmentsModel
 @{
     ViewData["Title"] = "Apartment Unit Management";
     Layout = "_Layout";
